--- a/frontend/src/app/components/blog-list/blog-list.component.html
+++ b/frontend/src/app/components/blog-list/blog-list.component.html
@@ -14,6 +14,7 @@
 	    <tr *ngFor="let blog of blogs">
 	      <td> {{blog.title}} </td>
 	      <td>
+					<button (click)="showBlog(blog._id)">Show</button>
 					<button (click)="editBlog(blog._id)">Edit</button>
 					<button (click)="deleteBlog(blog._id)">Delete</button>
 	      </td>
