--- a/frontend/src/app/components/blog-show/blog-show.component.html
+++ b/frontend/src/app/components/blog-show/blog-show.component.html
@@ -7,14 +7,15 @@
 	<table>
 		<tr>
 			<td>Entry Title</td>
+			<td>Entry Content</td>
 			<td>Date Posted</td>
 			<td>Actions</td>
 		</tr>
 		<tr *ngFor="let entry of blog.entries">
 			<td> {{entry.title}} </td>
+			<td> {{entry.content}} </td>
 			<td> {{entry.createdAt}} </td>
 			<td>
-				<button (click)="showEntry(entry._id)">Show</button>
 				<button (click)="deleteEntry(entry._id)">Delete</button>
 			</td>
 		</tr>
